<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NewDarkBlue"
    android:weightSum="10">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@mipmap/bulb"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/login_page_pic_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login_page_title"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:hint="@string/login_page_username_input"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:hint="@string/login_page_password_input"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/NewLightBlue"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_page_login_button"
        android:layout_marginTop="25dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/NewLightBlue"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_page_register_button"
        android:layout_marginTop="25dp"/>




</LinearLayout>